# TVHead

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md
assets/: blinking.vtnc  creeper.vtnc  oi.txt  order.vtnc  totallynotamongus.vtnc
models/: Monitor standing.20250810-122449.FCBak  Monitor standing.FCStd
put inside gif dec/: CMakeLists.txt
src/: TVHead.cpp  data.c  main.rs
